--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       </div>
       
     </div>
-    <p class="copy-right"><a href="index.html">Shivani</a>&copy;2019</p>
+    <p class="copy-right"><a href="index.html">Subham</a>&copy;2025</p>
     <br>
   <!-- FOOTER -->
 
